[metadata]
name = pandamesh
version = 0.1.0
author = Deltares
author_email = huite.bootsma@deltares.nl
description = From geodataframe to mesh
url = https://github.com/deltares/pandamesh
project_urls =
    Code=https://github.com/deltares/pandamesh
    Issues=https://github.com/deltares/pandamesh/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    gmsh
    geopandas
    pygeos
    triangle
python_requires = >=3.7

[options.extras_require]
all =
    geopandas
    matplotlib

docs = 
    %(all)s
    pydata-sphinx-theme
    sphinx
    sphinx-gallery

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    W503 # line break before binary operator
per-file-ignores = 
    __init__.py:F401
    ./docs/conf.py:F401
